Added integration tests on the pipeline

--- a/packs/maven-code-squad-dev/pipeline.yaml
+++ b/packs/maven-code-squad-dev/pipeline.yaml
@@ -11,3 +11,5 @@ pipelines:
       steps:
       - sh: mvn -Dgroups="unit" clean test
         name: unit-tests
+      - sh: mvn -Dgroups="integration" clean test
+          name: integration-tests
